Fix: Increased background for navbar background on mobile | Feat: Added titles to project bullet point headings

--- a/css/header.css
+++ b/css/header.css
@@ -164,7 +164,7 @@
         top: -1000px;
         opacity: 0;
         transition: all 1s ease;
-        height: 50vh;
+        height: 60vh;
         z-index: -1;
         background: #131313;
     }
@@ -175,7 +175,7 @@
         opacity: 1;
         transition: all 0.5s ease;
         z-index: 99;
-        height: 50vh;
+        height: 60vh;
         font-size: 1.6rem;
     }
 
