--- a/css/index.css
+++ b/css/index.css
@@ -35,8 +35,7 @@
 #text {      
     background-color: #0e0d0d;
     box-sizing: border-box;
-    border-radius: 25px;   
-    border-width: 100rem;    
+    border-radius: 25px;       
     padding: 15px;  
 }
 
