--- a/css/projectpage.css
+++ b/css/projectpage.css
@@ -10,7 +10,18 @@
     color: #ff6b6b;
 }
 
-.list{    
+.list{        
+    background-color: #0e0d0d;
+    box-sizing: border-box;
+    border-radius: 25px;
+
+    height: 30px;    
+    max-width: 150px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
     color: #ff6b6b;
 }
 
